# Smart-Home-Simulator

./: .gitignore  CMakeLists.txt
include/: Controller.h  Device.h  Light.h  Schedule.h  Server.h
src/: CMakeLists.txt  Device.cpp  Light.cpp  Schedule.cpp  Server.cpp  main.cpp
tests/: CMakeLists.txt  TestLight.cpp
